# PyGit

./: .deepsource.toml  .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt
demo/: demo-simple.tape
src/py_git/: __init__.py  __main__.py
src/py_git/commands/: auth.py
src/py_git/commands/auth/: gh_status.py
src/py_git/commands/clone/: gh_clone.py
src/py_git/commands/commit/: git_commit.py
src/py_git/commands/create_repo/: gh_create.py
src/py_git/commands/pull/: git_pull.py
src/py_git/commands/push/: git_push.py
src/py_git/utils/: logger.py
